# obscura

./: Cargo.toml
crates/obscura-js/src/: runtime.rs
crates/obscura-native-runtime/: Cargo.toml
crates/obscura-native-runtime/examples/: track17_open.rs
crates/obscura-native-runtime/src/: bindings.rs  lib.rs  state.rs  trace.rs  values.rs
crates/obscura-native-runtime/src/webapi/: base64.rs  canvas.rs  crypto.rs  document.rs  encoding.rs  location.rs  mod.rs  navigator.rs  screen.rs  timers.rs  webgl.rs  window.rs
crates/obscura-native-runtime/tests/: runtime_smoke.rs
docs/superpowers/plans/: 2026-06-17-obscura-native-runtime-structure-refactor.md  2026-06-17-obscura-native-runtime.md
docs/superpowers/specs/: 2026-06-17-obscura-native-runtime-structure-design.md
