[package]
name = "obscura-native-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = { workspace = true }
getrandom = "0.2"
obscura-dom = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
v8 = "137.3.0"

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
